--- a/app/assets/stylesheets/questions.css
+++ b/app/assets/stylesheets/questions.css
@@ -36,18 +36,19 @@
     cursor: pointer;
 }
 
+
 #new_question{
-    text-decoration: underline;
+    color :black;
 }
 
-#show{
-    text-decoration: underline;
+#show_qu{
+    color :black;
 }
 
-#edit{
-    text-decoration: underline;
+#edit_qu{
+    color :black;
 }
 
-#destroy{
-    text-decoration: underline;
+#destroy_qu{
+    color:black;
 }
