--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -30,6 +30,9 @@
         <td><strong>Explanation: </strong><%= question.explanation %></td>
       </tr>
       <tr>
+        <td><strong>Topic:</strong><%= question.topic %></td>
+      </tr>
+      <tr>
         <td>
           <table>
             <tr>
