--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -40,5 +40,12 @@
   <%= @question.explanation %>
 </p>
 
+<p>
+  <strong>Topic:</strong>
+  <%= @question.topic %>
+</p>
++
+
+
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
