--- a/app/assets/stylesheets/test_questions.css
+++ b/app/assets/stylesheets/test_questions.css
@@ -18,7 +18,7 @@ table#review th {
 table#review th#true {
   border: 2px solid white;
   font-weight: bold;
-  background-color: #999900;
+  background-color: #FFA500;
   text-align: center;
   vertical-align:middle;
 }
@@ -68,5 +68,5 @@ input[type='radio'] {
   height:6em;
  }
  yellow {
-   color: #999900;
+   color: #FFA500;
  }
