--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -1,9 +1,11 @@
 %h1 Select the topics for the test
-
 - @questions.each_with_index do |question, index|
   - if @topics.exclude?(question.topic)
     - @topics.push(question.topic)
     %input{:type => 'checkbox',:value => "selected", :name => "selected_topics[#{question.topic}]", :id => question.id ,:checked => @selected_topics[question.topic] == 'selected' }= question.topic
 %input{:type => 'checkbox', :value => "selected", :name => "Default", :checked => @Default == 'selected'} Default
 
-= link_to "Take Test" , {:controller => "test_questions", :action => "test", :default => @Default, :selected_topics => @selected_topics}, :id => 'test'
+= @selected_topics
+
+- if @selected_topics.has_value?("selected")
+  = link_to "Take Test",{:controller => "test_questions", :action => "test", :default => @Default, :selected_topics => @selected_topics}, :id => 'test'
