--- a/app/views/test_questions/test.html.haml
+++ b/app/views/test_questions/test.html.haml
@@ -7,7 +7,9 @@
     %tr
       = @selected_topics
       - @questions.each_with_index do |question, index|
-        -if @selected_topics[question.topic.to_s] == "selected" || @Default == "selected"
+        -if @selected_topics[question.topic] == "selected" || @Default == "selected"
+          = @mark
+          "#{index}"
           - if @mark[index] == "marked"
             %th#true= i
           - elsif @mark[index] == "answered"
