--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -1,71 +1,75 @@
-- if @OK != "clicked" 
-  %h1 Select the Topics
-  - session[:selected_topics].each do |topic, val|
-    %input{:type => 'checkbox',:value => "selected", :name => "selected_topics[#{topic}]",:checked => session[:selected_topics][topic] == 'selected', :id => "#{topic}" }= topic
-  %input{:type => 'checkbox', :value => "selected", :name => "Default", :checked => @Default == 'selected'} Default
-  %button{:value => "clicked", :name => "OK", @OK => 'clicked' } OK
-%br 
--if @OK == "clicked"
-  %table#review
-    %thead
-      %tr
-        - @mark.each do |id, val|
-          - if session[:selected_topics][@questions[id].topic] == "selected" || @Default == "selected"
-            - if val == "marked"
-              %th#true= id
-            - elsif val == "answered"
-              %th#false= id
-            - else
-              %th= id
-  %br
-  -i = 0
-  - if 1
-    - @questions.each_with_index do |question, i|
-      -if session[:selected_topics][question.topic] == "selected" || @Default == "selected"
-        -i+=1
-        = "#{i}."
-        = question.content
-        = image_tag question.image_url(:thumb).to_s if question.image_url.present?
-        %br
-        #content_q
-          - if  question.option1 != "nil"
-            %input{:type => 'radio', :value => "option1", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option1'}= question.option1
-            %br
-          - if  question.option2 != "nil"
-            %input{:type => 'radio', :value => "option2", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option2'}= question.option2
-            %br
-          - if  question.option3 != "nil"
-            %input{:type => 'radio', :value => "option3", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option3'}= question.option3
-            %br
-          - if  question.option4 != "nil"
-            %input{:type => 'radio', :value => "option4", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option4'}= question.option4
-            %br
+= form_tag test_questions_path, :id => 'test_form', :method => 'get' do
+  - if @OK != "clicked" 
+    %h1 Select the Topics
+    - session[:selected_topics].each do |topic, val|
+      %input{:type => 'checkbox',:value => "selected", :name => "selected_topics[#{topic}]",:checked => session[:selected_topics][topic] == 'selected', :id => "#{topic}" }= topic
+    %input{:type => 'checkbox', :value => "selected", :name => "Default", :checked => @Default == 'selected'} Default
+    %button{:value => "clicked", :name => "OK", @OK => 'clicked' } OK
+  %br 
+  -if @OK == "clicked"
+    - i = 1
+    %table#review
+      %thead
+        %tr
+          - @questions.each_with_index do |question, index|
+            - if session[:selected_topics][question.topic] == "selected" || @Default == "selected"
+              "#{i}"
+              - if @mark[index] == "marked"
+                %th#true= i
+              - elsif @mark[index] == "answered"
+                %th#false= i
+              - else
+                %th= i
+              - i += 1
+    %br
+    -i = 0
+    - if 1
+      - @questions.each_with_index do |question, i|
+        -if session[:selected_topics][question.topic] == "selected" || @Default == "selected"
+          -i+=1
+          = "#{i}."
+          = question.content
+          = image_tag question.image_url(:thumb).to_s if question.image_url.present?
           %br
-        %input{:type => 'checkbox',:value => "marked", :name => "mark[#{question.id}]", :checked => @mark[question.id] == 'marked'} 
-          %yellow mark
-        %br
-        %br
-        - if @submitted == "true"
-          #content
-            The correct answer is
-            %strong
-              = question[question.answer]
-            - if question[@answers[question.id]] != nil
-              and you selected
+          #content_q
+            - if  question.option1 != "nil"
+              %input{:type => 'radio', :value => "option1", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option1'}= question.option1
+              %br
+            - if  question.option2 != "nil"
+              %input{:type => 'radio', :value => "option2", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option2'}= question.option2
+              %br
+            - if  question.option3 != "nil"
+              %input{:type => 'radio', :value => "option3", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option3'}= question.option3
+              %br
+            - if  question.option4 != "nil"
+              %input{:type => 'radio', :value => "option4", :name => "answers[#{question.id}]", :checked => @answers[question.id] == 'option4'}= question.option4
+              %br
+            %br
+          %input{:type => 'checkbox',:value => "marked", :name => "mark[#{question.id}]", :checked => @mark[question.id] == 'marked'} 
+            %yellow mark
+          %br
+          %br
+          - if @submitted == "true"
+            #content
+              The correct answer is
               %strong
-                = question[@answers[question.id]]
-            - if question[@answers[question.id]] != nil
-              so it was
-              %i
-              = @correctness[question.id]
+                = question[question.answer]
+              - if question[@answers[question.id]] != nil
+                and you selected
+                %strong
+                  = question[@answers[question.id]]
+              - if question[@answers[question.id]] != nil
+                so it was
+                %i
+                = @correctness[question.id]
+          %br
         %br
-      %br
-      - if @submitted != 'true'
-        %button{:value => "clicked", :name => "review", @review => 'clicked' } Review All
-      - if @review == 'clicked' && @submitted != 'true'
-        %button{:value => 'true', :name => "submitted", @submitted => 'true'}Submit All
-      - if @submitted == 'true'
-        = link_to "Summary" , {:controller => "test_questions", :action => "summary", :count => @count, :answers => @answers}, :id => 'summa'
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
-  <script type="text/javascript">if (window.MathJax) { MathJax.Hub.Queue(["Typeset",MathJax.Hub]);}</script>
+        - if @submitted != 'true'
+          %button{:value => "clicked", :name => "review", @review => 'clicked' } Review All
+        - if @review == 'clicked' && @submitted != 'true'
+          %button{:value => 'true', :name => "submitted", @submitted => 'true'}Submit All
+        - if @submitted == 'true'
+          = link_to "Summary" , {:controller => "test_questions", :action => "summary", :count => @count, :answers => @answers}, :id => 'summa'
+  
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+    <script type="text/javascript">if (window.MathJax) { MathJax.Hub.Queue(["Typeset",MathJax.Hub]);}</script>
