--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -10,19 +10,19 @@
     - @selected_topics.each do |topic, val|
       -if val == "selected"
         %input{:type => 'radio',:value => "selected", :name => "selected_topics[#{topic}]",:checked => @selected_topics[topic] == 'selected', :id => "#{topic}" }= topic
-    - i = 1
+    - j = 0
     %table#review
       %thead
         %tr
           - @questions.each_with_index do |question, index|
             - if @selected_topics[question.topic] == "selected" || @Default == "selected"
-              - if @mark[index] == "marked"
-                %th#true= i
-              - elsif @mark[index] == "answered"
-                %th#false= i
+              - j += 1
+              - if @mark[question.id] == "marked"
+                %th#true= j
+              - elsif @mark[question.id] == "answered"
+                %th#false= j
               - else
-                %th= i
-              - i += 1
+                %th= j
     %br
     -i = 0
     - if 1
@@ -71,7 +71,7 @@
       - if @review == 'clicked' && @submitted != 'true'
         %button{:value => 'true', :name => "submitted", @submitted => 'true'}Submit All
       - if @submitted == 'true'
-        = link_to "Summary" , {:controller => "test_questions", :action => "summary", :count => @count, :answers => @answers}, :id => 'summa'
+        = link_to "Summary" , {:controller => "test_questions", :action => "summary", :count => @count, :answers => @answers, :total => "#{i}"}, :id => 'summa'
   
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
     <script type="text/javascript">if (window.MathJax) { MathJax.Hub.Queue(["Typeset",MathJax.Hub]);}</script>
