--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -20,7 +20,7 @@
       %thead
         %tr
           - @questions.each_with_index do |question, index|
-            - if @selected_topics[question.topic] == "selected" || @Default == "selected"
+            - if @selected_topics[question.topic] == "selected"
               - j += 1
               - if @mark[question.id] == "marked"
                 %th#true= j
@@ -31,8 +31,8 @@
     %br
     -i = 0
     - if 1
-      - @questions.each_with_index do |question, i|
-        -if @selected_topics[question.topic] == "selected" || @Default == "selected"
+      - @questions.each_with_index do |question, index|
+        -if @selected_topics[question.topic] == "selected" 
           -i+=1
           = "#{i}."
           = question.content
@@ -71,12 +71,13 @@
                 = @correctness[question.id]
           %br
         %br
-      - if @submitted != 'true'
-        %button{:value => "clicked", :name => "review", @review => 'clicked' } Review All
-      - if @review == 'clicked' && @submitted != 'true'
-        %button{:value => 'true', :name => "submitted", @submitted => 'true'}Submit All
-      - if @submitted == 'true'
-        = link_to "Summary" , {:controller => "test_questions", :action => "summary", :count => @count, :answers => @answers, :total => "#{j}"}, :id => 'summa'
+    - if @submitted != 'true'
+      %button{:value => "clicked", :name => "review", @review => 'clicked' } Review All
+    - if @review == 'clicked' && @submitted != 'true'
+      %button{:value => 'true', :name => "submitted", @submitted => 'true'}Submit All
+    - if @submitted == 'true'
+      = @selected_topics
+      = link_to "Summary" , {:controller => "test_questions", :action => "summary", :count => @count, :selected_topics => @selected_topics, :answers => @answers, :total => "#{j}"}, :id => 'summa'
   
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
     <script type="text/javascript">if (window.MathJax) { MathJax.Hub.Queue(["Typeset",MathJax.Hub]);}</script>
