--- a/app/views/test_questions/index.html.haml
+++ b/app/views/test_questions/index.html.haml
@@ -3,7 +3,7 @@
     %h1 Select the Topics
     - @selected_topics.each do |topic, val|
       %input{:type => 'radio',:value => "selected", :name => "selected_topics[#{topic}]",:checked => @selected_topics[topic] == 'selected', :id => "#{topic}" }= topic
-    %input{:type => 'radio', :value => "selected", :name => "Default", :checked => @Default == 'selected'} Default
+    %input{:type => 'radio', :value => "selected", :name => "all_topics", :checked => @all_topics == 'selected'} All Topics
     %button{:value => "clicked", :name => "OK", @OK => 'clicked' } OK
   %br 
   -if @OK == "clicked" || @review == "clicked" || @submitted == "true"
