Added pluralize for topic and improved coverage for image uploader

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -73,7 +73,7 @@ $(document).ready(function initfunction()
 
   <%= javascript_include_tag('question.js') %>
   
-  <p>Mathematical equations written in LaTeX must be delimitted by \(...\)</p>
+  <p><b> Note </b>: Mathematical equations written in LaTeX must be delimitted by \(...\)</p>
   
   <div class="topic">
     <%= form.label :topic %>
