--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -56,8 +56,7 @@
   <strong>Topic:</strong>
   <%= @question.topic %>
 </p>
-+
 
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
+<%= link_to 'Edit', edit_question_path(@question) %>
 <%= link_to 'Back', questions_path %>
