--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', question: @question %>
 
-<%= link_to 'Show', @question %> |
-<%= link_to 'Back', questions_path %>
+<u><strong><%= link_to 'Show', @question %></u></strong> |
+<u><strong><%= link_to 'Back', questions_path %></u></strong>
