--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,10 +6,10 @@
 </p>
 
 <p>
-  <strong>Image:</strong>
-  <br>
-  <br>
   <% if @question.image_url.present? %>
+    <strong>Image:</strong>
+    <br>
+    <br>
     <%= image_tag(@question.image_url(:thumb).to_s, :align=>"left") %>
     <% 20.times do %>
       <br>
@@ -58,5 +58,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_question_path(@question) %>
-<%= link_to 'Back', questions_path %>
+<u><strong><%= link_to 'Edit', edit_question_path(@question) %></strong></u>
+<u><strong><%= link_to 'Back', questions_path %></strong></u>
