--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,8 +3,8 @@
 </td>
 <td>
   <%= form_for(user) do |f| %>
-    <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}) %>
-    <%= f.submit 'Change Role', :class => 'button-xs',:data => {:confirm => "Are you sure you want to change the role?"}%>
+    <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}) unless user == current_user%>
+    <%= f.submit 'Change Role', :class => 'button-xs',:data => {:confirm => "Are you sure you want to change the role?"} unless user == current_user%>
   <% end %>
 </td>
 <td>
