--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,7 @@
 
 <!--<br>-->
 
-<%= link_to 'New User', new_user_path %>
+<!--<(%= link_to 'New User', new_user_path %>-->
 <div class="container">
   <div class="row">
     <h3>Users</h3>
